Fix issues with spacing

--- a/stylesheets/components/form/_button.styl
+++ b/stylesheets/components/form/_button.styl
@@ -55,7 +55,7 @@
     background-color: $charles-blue
 
     &:hover
-      background-color: $optimistic-blue
+      background-color: $freedom-red
 
   &--y
     background-color: $yellow
